tratando erros e concertando a barra de scroll do modal

--- a/ApiAnimes/animes.html
+++ b/ApiAnimes/animes.html
@@ -9,10 +9,11 @@
   </head>
   <body>
     <header class="header">
-      <h1>TOP 12 ANIMES</h1>
+      <h1>TOP ANIMES</h1>
     </header>
     <div class="container"></div>
+    <div id="modal-anime"></div>
 
-   <script src="animes.js"> </script>
+    <script src="animes.js"></script>
   </body>
 </html>
